[package]
name = "bytecode_trait"
version = "0.0.1"
authors = ["Yashodhan Joshi"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Contains required traits and stuff for bytecode derive macro."
readme = "README.md"
homepage= "https://github.com/YJDoc2/Bytecode"
repository = "https://github.com/YJDoc2/Bytecode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
